# unicorn-backend

./: .codecov.yml  .coveragerc  .dockerignore  .env.development  .env.testing  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.development  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  housekeeping.md
.github/workflows/: build-backend.yml
scripts/: daily.sh  every-minute.sh
scripts/dbinit/: initialize-database.sh
unicorn/: development.example.env  generate_secret_key.py  manage.py  seed.json
unicorn/accounts/: admin.py  apps.py  backends.py  constants.py  exceptions.py  filters.py  forms.py  middleware.py  models.py  pipeline.py  signals.py  urls.py  views.py
unicorn/accounts/api/: nested_serializers.py  serializers.py  urls.py  views.py
unicorn/accounts/migrations/: 0001_squashed_0002_auto_20201017_1147.py  0002_alter_user_display_name_format.py  0003_user_ticket_period.py
unicorn/accounts/tests/: test_exceptions.py  test_models.py
unicorn/achievements/: admin.py  apps.py  constants.py  filters.py  models.py  signals.py
unicorn/achievements/api/: nested_serializers.py  serializers.py  urls.py  views.py
unicorn/achievements/management/commands/: award_achievements.py  level_up.py
unicorn/achievements/migrations/: 0001_squashed_0002_auto_20201017_1034.py
unicorn/achievements/tests/: test_models.py
unicorn/competitions/: __init__.py  admin.py  apps.py  constants.py  filters.py  models.py  parsers.py  signals.py  signals_achievements.py  toornament.py  views.py
unicorn/competitions/api/: nested_serializers.py  serializers.py  urls.py  views.py
unicorn/competitions/management/commands/: backfill_compoadmin_contributor_permissions.py  entry_status_progress.py  export_entries.py  update_competition_states.py
unicorn/competitions/migrations/: 0001_squashed_0002_auto_20201017_1034.py  0002_auto_20210331_0822.py  0003_alter_genre_category.py  0004_competition_visibility.py  0005_competition_show_prestart_lock.py  0006_add_sponsor.py  0007_entry_vote_msg.py  0008_remove_toornament.py  0009_competition_scoring_complete.py  0010_competition_event.py  0011_competition_header_image_file.py  0012_increase_contrib_info_length.py
unicorn/competitions/tests/: test_management.py  test_models.py  test_signals.py
unicorn/core/: admin.py  apps.py  models.py  tests.py
unicorn/core/api/: schema.py  serializers.py  urls.py  views.py
unicorn/core/migrations/: 0001_squashed_0002_auto_20220415_0847.py
unicorn/extras/: models.py
unicorn/matchmaking/: __init__.py  admin.py  apps.py  constants.py  models.py  signals.py
unicorn/matchmaking/api/: serializers.py  urls.py  views.py
unicorn/matchmaking/migrations/: 0001_initial.py
unicorn/matchmaking/tests/: test_models.py  test_views.py
unicorn/messaging/: admin.py  models.py
unicorn/messaging/migrations/: 0001_initial.py
unicorn/news/: models.py
unicorn/nfc/: models.py
unicorn/project-static/: README.md
unicorn/project-static/css/: override.css
unicorn/templates/: _base.html  _messages.html  _skeleton.html
unicorn/templates/accounts/: login.html  profile.html
unicorn/templates/admin/: base_site.html
unicorn/templates/modules/: social_account_card.html  social_provider_card.html
unicorn/templates/oauth2_provider/: authorize.html
unicorn/theme/: README.md
unicorn/theme/static_src/: package-lock.json  package.json  tailwind.config.js
unicorn/theme/static_src/src/: styles.css  styles.scss
unicorn/unicorn/: api.py  configuration.py  settings.py  urls.py  views.py  wsgi.py
unicorn/utilities/: api.py  authentication.py  custom_inspectors.py  fields.py  filters.py  forms.py  managers.py  middleware.py  models.py  oscar.py  permissions.py  utils.py
unicorn/zoodo_utils/auth/: authentication.py  oauth2_backends.py  settings.py  tokens.py  utils.py
unicorn/zoodo_utils/tus/: signals.py  views.py
