[project]
name = "unicorn-backend"
version = "7.0.0"
description = "Unified Net-based Interface for Competition Organization, Rules and News."
authors = [
  { name = "Core:Systemstøtte", email = "support@gathering.org" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4.0"

[project.urls]
homepage = "https://unicorn.gathering.org"
repository = "https://github.com/gathering/unicorn-backend"
issues = "https://github.com/gathering/unicorn-backend/issues"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "~5.1.8"
djangorestframework = "~3.16.0"
django-cors-headers = "~4.7.0"
django-debug-toolbar = "~5.1.0"
django-filter = "~25.1"
django-guardian = "~2.4.0"
djangorestframework-guardian = "==0.3.0"
django-oauth-toolkit = "~2.4.0"
drf-writable-nested = "==0.7.2"
gunicorn = "~23.0.0"
pytz = "~2025.2"
python-dateutil = ">=2.9.0,<3.0"
social-auth-app-django = "^5.4.3"
django-environ = "~0.12.0"
django-tailwind = "==3.8.0"
drf-spectacular = "~0.28.0"
django-redis = "~5.4.0"
pillow = "^11.2.1"
django-auditlog = "~2.3.0"
psycopg = {extras = ["binary"], version = "^3.2.6"}
coverage = "^7.8.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
unittest2 = "^1.1.0"
black = "^25.1.0"

[build-system]
# Remember to also update in Dockerfile and Github Workflow
requires = ["poetry-core==2.1.2"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
exclude = '''
/(
  | migrations
)/
'''