[project]
name = "unicorn-backend"
version = "7.0.0"
description = "Unified Net-based Interface for Competition Organization, Rules and News."
authors = [{ name = "Core:Systemstøtte", email = "support@gathering.org" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4.0"

[project.urls]
homepage = "https://unicorn.gathering.org"
repository = "https://github.com/gathering/unicorn-backend"
issues = "https://github.com/gathering/unicorn-backend/issues"

[tool.poetry]
name = "unicorn-backend"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "~5.2.7"
djangorestframework = "~3.16.1"
django-cors-headers = "~4.9.0"
django-debug-toolbar = "~6.0.0"
django-filter = "~25.2.0"
django-guardian = "~3.2.0"
djangorestframework-guardian = "~0.4.0"
django-oauth-toolkit = "~3.1.0"
drf-writable-nested = "==0.7.2"
gunicorn = "~23.0.0"
pytz = "~2025.2"
python-dateutil = "~2.9.0"
social-auth-app-django = "^5.6.0"
django-environ = "~0.12.0"
django-tailwind = "==3.8.0"
drf-spectacular = "~0.28.0"
django-redis = "~6.0.0"
pillow = "^11.3.0"
django-auditlog = "~3.3.0"
psycopg = { extras = ["binary"], version = "^3.2.6" }


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
unittest2 = "^1.1.0"
black = "^25.9.0"
coverage = "^7.11.0"

[build-system]
# Remember to also update in Dockerfile and Github Workflow
requires = ["poetry-core==2.2.1"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
exclude = '''
/(
  | migrations
)/
'''
