[project]
name = "unicorn-backend"
version = "7.0.0"
description = "Unified Net-based Interface for Competition Organization, Rules and News."
authors = [{ name = "Core:Systemstøtte", email = "support@gathering.org" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4.0"

[project.urls]
homepage = "https://unicorn.gathering.org"
repository = "https://github.com/gathering/unicorn-backend"
issues = "https://github.com/gathering/unicorn-backend/issues"

[tool.poetry]
name = "unicorn-backend"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "~5.2.13"
djangorestframework = "~3.17.1"
django-cors-headers = "~4.9.0"
django-debug-toolbar = "~6.3.0"
django-filter = "~25.2.0"
django-guardian = "~3.3.1"
djangorestframework-guardian = "~0.4.0"
django-oauth-toolkit = "~3.2.0"
drf-writable-nested = "==0.7.2"
gunicorn = "~25.3.0"
pytz = "~2026.1"
python-dateutil = "~2.9.0"
social-auth-app-django = "^5.8.0"
django-environ = "~0.13.0"
django-tailwind = "~4.4.2"
drf-spectacular = "~0.29.0"
django-redis = "~6.0.0"
pillow = "^12.2.0"
django-auditlog = "~3.4.1"
psycopg = { extras = ["binary"], version = "^3.3.3" }


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
unittest2 = "^1.1.0"
black = "^26.3.1"
coverage = "^7.13.5"

[build-system]
# Remember to also update in Dockerfile and Github Workflow
requires = ["poetry-core==2.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
exclude = '''
/(
  | migrations
)/
'''
